tests/error/named_union_global_static.gw
// [contains] 'static' can only be used at class scope.
static union { int i; } u;
